<resources>
    <string name="app_name">Univention Password Manager</string>
    <string name="reset">Reset</string>
    <string name="repair">Repair</string>
    <string name="history">History</string>
    <string name="hint_password">Password</string>
    <string name="datetime">Datetime</string>
    <string name="password">Password</string>
    <string name="db_error">Database Error</string>
    <string name="history_empty">History empty. Please repair!</string>
    <string name="network_error">Network Error</string>
    <string name="repair_ok">Commit</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings_auth">Address and Authentication</string>
    <string name="settings_username">Username</string>
    <string name="settings_server_address">Server-Address</string>
    <string name="settings_generation">Password Generator</string>
    <string name="settings_url_compat">Ensure URL-compatibility</string>
    <string name="settings_level">Security-Level</string>
    <string name="pref_strength_minimum">Minimum</string>
    <string name="pref_strength_normal">Normal</string>
    <string name="pref_strength_advanced">Advanced</string>
    <string name="pref_strength_strong">Strong</string>
    <string name="pref_strength_extremely_strong">Extremely Strong</string>
    <string name="settings_security">Security</string>
    <string name="settings_require_authentication">Require Authentication</string>
    <string name="fab_save_settings">Save settings</string>
    <string name="button_settings">Settings</string>
    <string name="auth_title">Biometric Login</string>
    <string name="auth_subtitle">Login required to unlock app</string>
    <string name="settings_restart">Restart the app to apply changes</string>
    <string name="auth_error">Authentication error</string>
</resources>