<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_auth">

        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="login.schulen-wetteraukreis.de"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:key="pref_server_address"
            app:title="@string/settings_server_address" />
        <EditTextPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/settings_username"
            app:key="pref_username" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_generation">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/settings_url_compat"
            app:key="pref_url_compat"
            app:summary="@string/settings_url_compat_summary" />
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="10"
            android:title="@string/settings_level"
            app:entries="@array/pref_strength"
            app:entryValues="@array/pref_strength_values"
            app:key="pref_level" />
    </PreferenceCategory>
    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_security">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:title="@string/settings_require_authentication"
            app:key="pref_req_auth" />
    </PreferenceCategory>
</PreferenceScreen>